[gd_scene load_steps=25 format=3 uid="uid://1wxo3v63vb34"]

[ext_resource type="Script" path="res://Scripts/SceneLogic/MainMenuLogic.gd" id="1_f4b4m"]
[ext_resource type="Texture2D" uid="uid://b8e3e48a71xh" path="res://Textures/Logo.png" id="1_of33f"]
[ext_resource type="Theme" uid="uid://bih8b27ydr430" path="res://Themes/MainTheme.theme" id="1_vl1lt"]
[ext_resource type="Shader" path="res://Shaders/MainMenu.gdshader" id="3_phdk0"]
[ext_resource type="PackedScene" uid="uid://b56b4nxbv1o47" path="res://Objects/GUI_Objects/MassageBox.tscn" id="4_ebd3t"]
[ext_resource type="Texture2D" uid="uid://c2inw771la63a" path="res://Textures/images.png" id="4_meq5y"]
[ext_resource type="PackedScene" path="res://Objects/Window.tscn" id="4_vdy4f"]
[ext_resource type="AudioStream" uid="uid://cut1cviaotto7" path="res://Sounds/StartSceneMusic.mp3" id="5_je0ew"]
[ext_resource type="AudioStream" uid="uid://c5ertvulgaabp" path="res://Sounds/Voice 1 (1).mp3" id="6_4pnc7"]
[ext_resource type="PackedScene" uid="uid://dfqbtl2fmxhxc" path="res://Objects/SettingsPanel.tscn" id="6_i7u22"]
[ext_resource type="Shader" path="res://Shaders/RetroShader2.gdshader" id="9_ui3xp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_djn8e"]
shader = ExtResource("3_phdk0")
shader_parameter/background_color = Color(0, 0, 0, 1)
shader_parameter/line_color = Color(0, 0.329412, 0, 1)
shader_parameter/line_freq = 9.56
shader_parameter/height = 0.6
shader_parameter/speed = 0.5
shader_parameter/scale = Vector2(2, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_50up0"]

[sub_resource type="Animation" id="Animation_uvbd0"]
resource_name = "IdleAmin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_opyp5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sgp5n"]
_data = {
"IdleAmin": SubResource("Animation_uvbd0"),
"RESET": SubResource("Animation_opyp5")
}

[sub_resource type="Animation" id="Animation_pcoic"]
resource_name = "First"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1064, 772), Vector2(1063, 671)]
}

[sub_resource type="Animation" id="Animation_3u7rt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1064, 772)]
}

[sub_resource type="Animation" id="Animation_tu0r6"]
resource_name = "Second"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1063, 671), Vector2(1063, 671), Vector2(1063, 793)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_214p4"]
_data = {
"First": SubResource("Animation_pcoic"),
"RESET": SubResource("Animation_3u7rt"),
"Second": SubResource("Animation_tu0r6")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wlwon"]
shader = ExtResource("9_ui3xp")
shader_parameter/crt_curve = 0.0
shader_parameter/crt_scan_line_color = 0.46
shader_parameter/aperture_grille_rate = 0.277
shader_parameter/rf_switch_esque_blur = 0.569
shader_parameter/white_noise_rate = 0.211

[sub_resource type="Animation" id="Animation_v8iea"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1o4it"]
resource_name = "main_logo_anim"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.35, 1.35), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3k58"]
_data = {
"RESET": SubResource("Animation_v8iea"),
"main_logo_anim": SubResource("Animation_1o4it")
}

[node name="MainMenu" type="Node2D"]
scale = Vector2(1.0155, 1.0155)
script = ExtResource("1_f4b4m")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_je0ew")
autoplay = true

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4pnc7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vl1lt")

[node name="Background" type="TextureRect" parent="CanvasLayer/Control"]
material = SubResource("ShaderMaterial_djn8e")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_50up0")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -340.0
offset_right = 400.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 200)
texture = ExtResource("1_of33f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/TextureRect"]
autoplay = "IdleAmin"
libraries = {
"": SubResource("AnimationLibrary_sgp5n")
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -338.0
offset_right = 338.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
placeholder_text = "Введите команду"
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
caret_blink = true

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Для того чтобы узнать доступные команды введите команду Help и нажмите Enter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Ввести"

[node name="HelpPanel" parent="CanvasLayer/Control" instance=ExtResource("4_vdy4f")]
visible = false
layout_mode = 0
offset_top = 0.0
offset_bottom = 366.0

[node name="RichTextLabel" parent="CanvasLayer/Control/HelpPanel/MarginContainer/VBoxContainer" index="2"]
bbcode_enabled = true
text = "[color=green]Это справка подскажет вам основные команды которые можно вводить в данном меню

[color=yellow]Start[/color] - начать взлом
[color=yellow]Sound on[/color] - включить музыку
[color=yellow]Sound off[/color] - выключить музыку
[color=yellow]Help[/color] - вызвать окно помощи
[color=yellow]Exit[/color] - выключить программу
[/color]
"

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1064.0
offset_top = 772.0
offset_right = 1365.0
offset_bottom = 867.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_meq5y")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Достижение получено"

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "НЕОБУЧАЕМЫЙ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Panel"]
libraries = {
"": SubResource("AnimationLibrary_214p4")
}

[node name="SettingsPanel" parent="CanvasLayer/Control" instance=ExtResource("6_i7u22")]
visible = false
layout_mode = 1

[node name="MassageBox" parent="CanvasLayer" instance=ExtResource("4_ebd3t")]
visible = false
offset_left = 1.0
offset_top = -3.0
offset_right = 1.0
offset_bottom = -3.0
TitleText = "Mr.S"
Message = "[color=green]Здорова, я [wave amp=50 freq=10][color=yellow]Mr.S[/color][/wave] и ты пользуешься моей программой для взлома! Ты скорее всего крутой хакер, однако я расскажу, как пользоваться данной утилитой. Взлом проходит в 2 этапа перед каждым этапом тебя ждет подсказка как его завершить. К сожалению программа не автоматическая и придется поработать ручками и мозгами!

[center][color=yellow]I этап взлома [/color][/center]

Для того, чтобы взломать пароль системы тебе нужно выгрузить зашифрованные данные из оперативной памяти компьютера, а для этого тебе придется перенаправить поток информации в нужное русло. Программа построит для тебя граф всевозможных путей от памяти компьютера (вершина графа под именем[color=yellow]НАЧАЛО[/color]) и до области видимости данной программы (вершина графа под именем [color=yellow]КОНЕЦ[/color]). Есть много путей перенаправить информацию, однако многие из них недостаточно быстры, поэтому программа построит для тебя таблицу времени передвижения между вершинами графа.

[color=yellow] Сопоставь граф и таблицу и найди самый быстрый путь от НАЧЛА до КОНЦА, чтобы программа успела выкачать данные перед тем как компьютер заметит неладное[/color][/color]
"
CharSound = "res://Sounds/CharClick.mp3"

[node name="Background2" type="TextureRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_wlwon")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_50up0")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(685, 202)
texture = ExtResource("1_of33f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
autoplay = "main_logo_anim"
libraries = {
"": SubResource("AnimationLibrary_s3k58")
}

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="ContinueButtonClick" from="CanvasLayer/MassageBox" to="." method="_on_massage_box_continue_button_click"]

[editable path="CanvasLayer/Control/HelpPanel"]
